--- a/forallx-adl-what.tex
+++ b/forallx-adl-what.tex
@@ -274,7 +274,7 @@ Return briefly to another example we discussed earlier: \begin{earg}
  	\end{earg} But not all: some adjectives like `fake' or `alleged' do not yield conclusive arguments when substituted for \meta{F}: `This is a fake gun; so this is a gun' is not a conclusive argument. We will return in §\ref{s:FOLBuildingBlocks} to the logical structure of examples like these, and to expressions like `fake gun' in §\ref{s:complex_adj}.
 
 
-\section{Soundness}
+\section{Soundness}\label{s:sound}
 
 The important thing to remember is that validity is not about the actual truth or falsity of the sentences in the argument. It is about whether the structure of the argument ensures that the premises support the conclusion. Nonetheless, we shall say that an argument is \define{sound} if, and only if, it is both valid and all of its premises are true. So every sound argument is valid and conclusive. But not every valid argument is sound, and not every conclusive argument is sound.
 
