--- a/forallx-adl-tfl.tex
+++ b/forallx-adl-tfl.tex
@@ -423,7 +423,7 @@ In fact, sentence \ref{if2} can be paraphrased as `If Jean is in France, then Je
 	\end{earg}
 If we think really hard, all four of these sentences mean the same as  `If Jean is in Paris, then Jean is in France'. So they can all be symbolised by `$P \eif F$'. 
 
-It is important to bear in mind that the connective `\eif' tells us only that, if the antecedent is true, then the consequent is true. It says nothing about a \emph{causal} connection between two events (for example). In fact, we seem to lose a huge amount when we use `$\eif$' to symbolise English conditionals. We shall return to this in \S§\ref{s:IndicativeSubjunctive} and \ref{s:ParadoxesOfMaterialConditional}.
+It is important to bear in mind that the connective `\eif' tells us only that, if the antecedent is true, then the consequent is true. It says nothing about a \emph{causal} connection between two events (for example). In fact, we seem to lose a huge amount when we use `$\eif$' to symbolise English conditionals. We shall return to this in §§\ref{s:IndicativeSubjunctive} and \ref{s:ParadoxesOfMaterialConditional}.
 
 \section{Biconditional}
 Consider these sentences:
