thought i was done, but maybe now i'm done

--- a/forallx-adl-what.tex
+++ b/forallx-adl-what.tex
@@ -179,11 +179,11 @@ Many people will find the premises plausible, and the conclusion therefore compe
 Sometimes people think that logic will provide a powerful tool to persuade and convince others of their point of view. They sometimes want to study logic as if it is some dark art enabling them to subdue beliefs that contradict their own. This is not really a very nice thing to want to do – to force a belief on someone, whether they want to believe it or not – and so it is not particularly regrettable that logic doesn't help you to do it. Logic can show which claims follow from which others, and which contradict one another. It can help us elaborate the content of some claim, or delineate the commitments a certain belief would incur. But logic does not tell you what to believe, even when you have a conclusive argument.
 
 
-The question, \emph{what ought I to believe?} is one of the deepest in the area of philosophy known as \define{epistemology}, the theory of knowledge. Logic is not able to answer that question all by itself. Even if logic tells you that there is a conclusive argument from premise \meta{A} to conclusion \meta{B}, logic can't tell you whether you ought to believe both, or reject both. However, logic will tell you something important, even if it is only a limited part of the answer to the question of rational belief. It will tell you that, when you know an argument to be conclusive, \emph{you cannot both accept its premises while rejecting its conclusion}. Thus conceived, logic is not even a science of reasoning, because it does not tell you what to think. Logic can't tell you, or anyone else, which packages of premises-and-conclusions to accept.
+The question, \emph{what ought I to believe?} is one of the deepest in the area of philosophy known as \define{epistemology}, the theory of knowledge. Logic is not able to answer that question all by itself. Even if logic tells you that there is a conclusive argument from premise \meta{A} to conclusion \meta{B}, logic can't tell you whether you ought to believe both, or reject both. However, logic will tell you something important, even if it is only a limited part of the answer to the question of rational belief. It will tell you that, when you know an argument to be conclusive, \emph{you cannot both accept its premises while rejecting its conclusion} – at least, not while being ideally rational. Thus conceived, logic is not even a science of reasoning, because it does not tell you what to think. Logic can't tell you, or anyone else, which packages of premises-and-conclusions to accept.
 
 
  \section{Conclusiveness for Special Reasons}
- An argument can be conclusive for reasons unrelated to its structure. Take this example:
+ An argument can be conclusive for reasons unrelated to its structure. Take this example about my pet fox Juanita:
  	\begin{earg}
  		\item[] Juanita is a vixen.
  		\item[So:] Juanita is a fox.
