--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -68,12 +68,12 @@ This book has been designed for use in conjunction with the University of Adelai
 		\item Chapters \ref{ch.FOL}–\ref{ch.semantics} cover quantified or predicate logic;
 		\item and Chapters \ref{ch.NDTFL}–\ref{ch.NDFOL} cover the formal proof systems for our logical languages.
 	\end{itemize}
-	\item The book contains many cross-references to other sections. So a reference to `§\ref{s.sentencesTFL}' indicates that you should consult section 6, subsection 2 – you will find this on page \pageref{s.sentencesTFL}. Cross-references are hyperlinked, as are entries in the table of contents.
+	\item The book contains many cross-references to other sections. So a reference to `§\ref{s.sentencesTFL}' indicates that you should consult section 6, subsection 2 – you will find this on page \pageref{s.sentencesTFL}. Cross-references and entries in the table of contents are hyperlinked.
 	\item  Figure~\ref{fig:depend} shows how the sections depend on one another. For example, the arrows coming from §\ref{s:Interpretations} in the diagram show that understanding that section requires familiarity with §\ref{c:entvalid} and §\ref{s:FOLSentences}, and also any sections on which they depend.
+	\item Each chapter in the book concludes with a box labelled `Key Ideas in §$n$'. These are not a summary of the chapter, but contain some indication of what I regard as the main ideas that you should be taking away from your reading of the chapter. 
 	\item Logical ideas and notation are pretty ubiquitous in philosophy, and there are a lot of different systems. We cannot cover all the alternatives, but some indication of other terminology and notation is contained in Appendix \ref{app.notation}.
 	\item A quick reference to many of the aspects of the logical systems I introduce can be found in Appendix \ref{ch.qr}.
-	\item When I first use a new piece of technical terminology, it is introduced by writing it in small caps, \textsc{like this}. You can find an index of defined terms in Appendix \ref{app.index}.
-	\item Each chapter in the book concludes with a box labelled `Key Ideas in §$n$'. These are not a summary of the chapter, but contain some indication of what I regard as the main ideas that you should be taking away from your reading of the chapter. 
+	\item When I first use a new piece of technical terminology, it is introduced by writing it in small caps, \textsc{like this}. The index of defined terms is Appendix \ref{app.index}.
 	\item The book is the product of a number of authors. `I' doesn't always mean me, but `you' mostly means you, the reader, and `we' mostly means you and me.
 \end{itemize}
 I appreciate any comments or corrections: \href{mailto:antony.eagle@adelaide.edu.au}{\nolinkurl{antony.eagle@adelaide.edu.au}}.
@@ -81,12 +81,12 @@ I appreciate any comments or corrections: \href{mailto:antony.eagle@adelaide.edu
  \thispagestyle{empty}
 \begin{figure}
 {\footnotesize
-\begin{tikzpicture}[sibling distance=10em]
+\begin{tikzpicture}[sibling distance=8em]
  \matrix (depend)
  [
       matrix of nodes,
       column sep      = 3.5em,
-      row sep         = 5ex,
+      row sep         = 3.75ex,
       nodes={shape=ellipse,
     draw, anchor=center, inner sep=0.75ex,
     top color=white, bottom color=gray!20}
@@ -103,7 +103,7 @@ I appreciate any comments or corrections: \href{mailto:antony.eagle@adelaide.edu
 §\ref{s:CompleteTruthTables} & 	 & §\ref{s:Derived} & §\ref{c:proof.strat} & \\
 §\ref{s:Semantic.concepts} & 	 & §\ref{s:alternates} & §\ref{s:BasicFOL} & §\ref{s:CQ} \\
 §\ref{c:entvalid} & §\ref{s:shortcuts} &    & §\ref{ch.identity} & \\
-§\ref{s:expressiveness} & §\ref{s:PartialTruthTable} &    & §\ref{sec:soundcomp} & §\ref{s:nextsteps} \\
+§\ref{s:expressiveness} & §\ref{s:PartialTruthTable} &   §\ref{s:nextsteps} & §\ref{sec:soundcomp} &  \\
     };
     \path[<-,thick]
 \foreach \x/\y in {1/2, 2/3, 3/4, 4/5, 5/6, 6/7, 7/8, 8/9, 9/10, 10/11, 11/12} { (depend-\x-1) edge  (depend-\y-1) }
@@ -112,16 +112,20 @@ I appreciate any comments or corrections: \href{mailto:antony.eagle@adelaide.edu
 \foreach \x/\y in {4/5, 5/6, 6/7, 7/8, 8/9, 9/10, 10/11, 11/12} { (depend-\x-4) edge  (depend-\y-4) }
 (depend-11-1) edge (depend-11-2)
 (depend-11-2) edge (depend-12-2)
-(depend-12-4) edge (depend-12-5)
+(depend-12-4) edge [in=340,out=225] (depend-12-3)
 (depend-7-1) edge [looseness=0.8] (depend-2-2)
 (depend-5-2) edge [looseness=0.5] (depend-3-3)
 (depend-7-4) edge (depend-7-5)
 (depend-9-4) edge (depend-9-3)
 (depend-9-3) edge (depend-10-3)
 (depend-10-4) edge (depend-10-5)
-(depend-7-3) edge [out=235,in=190] (depend-12-4) %looseness=1
+(depend-8-3) edge [out=235,in=180] (depend-12-4) %looseness=1
 (depend-8-1) edge [looseness=1.2]  (depend-4-4)
-(depend-11-1) edge [out=46,in=244] (depend-4-3);
+(depend-11-1) edge [out=46,in=244] (depend-4-3)
+(depend-12-1) edge [in=235,out=340] (depend-12-3)
+(depend-7-5) edge [in=305,out=315,looseness=1.2] (depend-12-3)
+(depend-10-3) edge (depend-12-3)
+(depend-7-2) edge [in=120,out=270] (depend-12-3);
 	\end{tikzpicture}
 	\caption{How the sections depend on one another. \label{fig:depend}}}
 \end{figure}
